[tool.poetry]
name = "aiodl"
version = "0.1.0"
description = ""
authors = ["hrsma2i <hrs.ma2i@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
asyncio = "^3.4"
aiohttp = "^3.7.4"
tqdm = "^4.41"
pandas = "^0.25.3"
python-json-logger = "^0.1.11"
typer = "^0.3.1"
[tool.poetry.dev-dependencies]
jupyter = "^1.0"
mypy = "^0.761.0"
flake8 = "^3.7"
black = "^19.10b0"

[tool.poetry.scripts]
aiodl = "aiodl.download_img:run_with_typer"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

